--- a/demo/vaadin-router-lifecycle-callbacks-demos.html
+++ b/demo/vaadin-router-lifecycle-callbacks-demos.html
@@ -192,7 +192,9 @@
             is: 'x-user-manage',
             onBeforeLeave: function(context) {
               if (context.pathname.indexOf('user/delete') > 0) {
-                return confirm('Are you sure you want to delete this user?') || context.cancel();
+                if (!window.confirm('Are you sure you want to delete this user?')) {
+                  return context.cancel();
+                }
               }
             }
           });
