make the dynamic redirect demo shorter

--- a/demo/demo-shell.html
+++ b/demo/demo-shell.html
@@ -17,3 +17,4 @@
 <link rel="import" href="demo-elements/x-profile-view.html">
 <link rel="import" href="demo-elements/x-user-numeric-view.html">
 <link rel="import" href="demo-elements/x-user-not-found-view.html">
+<link rel="import" href="demo-elements/x-login-view.html">
